default sidecar types to empty to allow all sidecar transaction record types
Signed-off-by: Xin Li <xin.li@swirldslabs.com>